# cf-precheck

./: .gitignore  README.md  mpw_precheck.py  pyproject.toml
.github/workflows/: precheck_test.yml  publish.yml
dependencies/: Dockerfile
src/cf_precheck/: __main__.py  check_manager.py  cli.py  config.py  logging.py  results.py  runner.py
src/cf_precheck/be_checks/: run_be_checks  run_oeb_check  run_openframe_check
src/cf_precheck/checks/: gpio_defines.py  illegal_cellname.py  klayout_drc.py  lvs.py  magic_drc.py  metal.py  oeb.py  pdn.py  spike.py  topcell.py  xor.py
src/cf_precheck/checks/magic_converters/: magic_drc_to_rdb.py  magic_drc_to_tcl.py  magic_drc_to_tr_drc.py  tr2klayout.py
src/cf_precheck/drc_scripts/: sky130A_mr.drc
